Fixed navigation mobile

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -308,6 +308,16 @@
         font-size: 1.7rem;
         color: white;
         text-align: center; }
+        .Work-item .Work-item-Content-wrapper .Work-item-info-wrapper .Work-item-info .Work-item-button {
+          background-color: white;
+          color: #2a3654;
+          cursor: pointer;
+          width: fit-content;
+          border-radius: 50px;
+          margin: auto;
+          padding: 0.5rem 3rem; }
+          .Work-item .Work-item-Content-wrapper .Work-item-info-wrapper .Work-item-info .Work-item-button:hover {
+            background-color: rgba(255, 255, 255, 0.5); }
         .Work-item .Work-item-Content-wrapper .Work-item-info-wrapper .Work-item-info .Company-icon-wrapper {
           display: flex;
           justify-content: center;
